k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: golinks
spec:
  selector:
    app: golinks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
